kub-test/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app-dep
  name: app-dep
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-dep
    spec: 
      volumes:
      - name: config-vol
        configMap:
          name: log-config
          items:
          - key: log_level
            path: log_level
      containers:
      - image: georgemusa/assignment:20210815-b2f25830
        name: assignment
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: config-vol
          mountPath: /etc/config
        resources: 
          requests: 
            memory: "124Mi"
            cpu: "250m"
          limits: 
            memory: "248Mi"
            cpu: "500m" 
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe: 
          tcpSocket:
            port: 8090  
          initialDelaySeconds: 60
          periodSeconds: 10
      restartPolicy: Always

status: {}
