kub-test/mysqlsrv.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-04-22T14:00:29Z"
  labels:
    app: mysql
  name: mysql
  namespace: default
  resourceVersion: "2008"
  uid: 226fcc9e-f742-4087-9eed-6a5bc041b14a
spec:
  clusterIP: 10.43.17.36
  clusterIPs:
  - 10.43.17.36
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
