kub-test/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-dep
  name: app-srv
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
    nodePort: 30008
  selector:
    app: app-dep
  type: NodePort
status:
  loadBalancer: {}
